--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,3 +27,21 @@ jobs:
       with:
         name: artifact
         path: out/artifacts/jar/Minesweeper-1.0.jar
+        
+  checkstyle:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: control with checkstyle
+      run: mvn checkstyle:checkstyle
+    - name: checkstyle results
+      uses: actions/upload-artifact@v1
+      with:
+        name: results
+        path: target/checkstyle-result.xml
