--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,3 +45,21 @@ jobs:
       with:
         name: results
         path: target/checkstyle-result.xml
+
+  pmd:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: control with pmd
+      run: mvn pmd:pmd
+    - name: pmd results
+      uses: actions/upload-artifact@v1
+      with:
+        name: pmd_results
+        path: target/pmd.xml
