--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -63,3 +63,21 @@ jobs:
       with:
         name: pmd_results
         path: target/pmd.xml
+
+  spotbugs:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: control with spotbugs
+      run: mvn spotbugs:spotbugs
+    - name: spotbugs results
+      uses: actions/upload-artifact@v1
+      with:
+        name: spotbugs_results
+        path: target/spotbugs.xml
