--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -80,4 +80,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: spotbugs_results
-        path: target/spotbugs.xml
+        path: target/spotbugsXml.xml
